/*
  CarStandFCOOL API

  An API for managing a cloud-based car dealership service

  The version of the OpenAPI document: 1.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package openapitools;


message User {

  int32 userId = 1;

  string firstName = 2;

  string lastName = 3;

  string email = 4;

}
